--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="apple-touch-icon" href="./src/assets/Logo_Color.svg" />
     <title>Rus tili imtihoni test namunalari!</title>
   </head>
   <body>
