--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/round_logo.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -10,8 +11,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="apple-touch-icon" href="./src/assets/Logo_Color.svg" />
-    <title>Rus tili imtihoni test namunalari!</title>
+    <link rel="apple-touch-icon" href="/round_logo.png" />
+    <title>Namunaviy testlar platformasi</title>
   </head>
   <body>
     <div id="root"></div>
